# client_sdk_generator

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  debug_enum.rs  generate_all_sdks.sh  instructions.md  test_all_combinations.sh
.github/workflows/: ci.yml  release.yml
examples/: petstore-graphql.graphql  petstore-openapi.yaml  petstore.proto  petstore.schema
generated-java-graphql-sdk-verified/: pom.xml
generated-java-graphql-sdk-verified/docs/: README.md  api.md
output/go_graphql_sdk/: go.mod
output/go_graphql_sdk/client_sdk/: async_client.go  client.go  config.go
output/go_graphql_sdk/docs/: README.md
output/go_grpc_sdk/client_sdk/: async_client.go  client.go  config.go
output/go_grpc_sdk/docs/: README.md  api.md
output/java_graphql_sdk/: pom.xml
output/java_grpc_sdk/: pom.xml
output/python_graphql_sdk/: setup.py
output/python_grpc_sdk/: requirements.txt
output/rust_rest_sdk/: Cargo.toml
output/typescript_grpc_sdk/: package.json
output/typescript_rest_sdk/: jest.config.js  package.json
src/: lib.rs  main.rs
src/core/: config.rs  features.rs  generator.rs  mod.rs  template.rs  test_generation.rs  types.rs
src/generators/: go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/parsers/: graphql.rs  graphql_old.rs  grpc.rs  grpc_old.rs  mod.rs  openapi.rs
templates_old/: README.md
templates_old/go/: types.go.hbs
templates_old/java/: api_docs.md.hbs
templates_old/rust/: client.hbs  client.rs.hbs
templates_old/typescript/: client.ts.hbs  tsconfig.json.hbs
tests/: basic_tests.rs
(+160 files in other folders)
